syntax = "proto3";

package jcopy;

message Empty {}

message CreateRoomRequest {
    string id = 1;
    string clientId = 2;
    int64 expireTime = 3;      // timestamp
    int64 num=4;
}

message CreateRoomResponse {
    string id = 1;
    string roomId = 2;
    string textId = 3;
    repeated string fileIds = 4;
}

message JoinRoomRequest {
    string id = 1;
    string clientId = 2;
    string roomId = 3;
}

message JoinRoomResponse {
    string id = 1;
    string result = 2;
    string roomId = 3;
    string textId = 4;
    repeated string fileIds = 5;
    string expireTime = 6;
    int64 leftStorage = 7;
}

message CreateTextRequest {
    string id = 1;
    int64 expireTime = 2;      // timestamp
}

message CreateTextResponse {
    string id = 1;
    string textId = 2;
}

message GetJoinedClientIdsRequest {
    string id = 1;
    string roomId = 2;
    string clientId = 3;
}

message GetJoinedClientIdsResponse {
    string id = 1;
    string roomId = 2;
    repeated string clientIds = 3;
    int64 leftStorage = 4;
}

message GetTextRequest {
    string id = 1;
    string textId = 2;
}

message GetTextResponse {
    string id = 1;
    string textValue = 2;
}

message GetFilesRequest {
    string id = 1;
    string textId = 2;
    repeated string fileIds = 3;
}

message GetFilesResponse {
    string id = 1;
    string textValue = 2;
    repeated string fileNames = 3;
}

message GetLeftStorageRequest {
    string id = 1;
    string roomId = 2;
    int64 size = 3;
}

message GetLeftStorageResponse {
    string id = 1;
    string roomId = 2;
    int64 leftStorage = 3;
}


service Room {
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse){};
    rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse){};
    rpc GetJoinedClientIds (GetJoinedClientIdsRequest) returns (GetJoinedClientIdsResponse){};
    rpc GetLeftStorage(GetLeftStorageRequest) returns (GetLeftStorageResponse){};
}

service Storage {
    rpc CreateText (CreateTextRequest) returns (CreateTextResponse){};
    rpc GetFiles (GetFilesRequest) returns (GetFilesResponse){};
    rpc GetText (GetTextRequest) returns (GetTextResponse){};
}
