syntax = "proto3";

message Empty {}

message CreateRoomRequest {
    string clientSession = 1;
    string expireTime = 2;      // Date str
}

message CreateRoomResponse {
    string roomId = 1;
    string textId = 2;
    repeated string fileIds = 3;
}

message JoinRoomRequest {
    string clientSession = 1;
    string roomId = 2;
}

message JoinRoomResponse {
    string result = 1;
    string roomId = 2;
    string textId = 3;
    repeated string fileIds = 4;
}

message CreateTextRequest {
    string expireTime = 1;      // Date str
}

message CreateTextResponse {
    string textId = 1;
}

message GetTextRequest {
    string textId = 1;
}

message GetTextResponse {
    string textValue = 1;
}

service RoomService {
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse){};
    rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse){};
}

service StorageService {
    rpc CreateText (CreateTextRequest) returns (CreateTextResponse){};
    rpc GetText (GetTextRequest) returns (GetTextResponse){};
}
